# Use-Ai.rs

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
crates/core/lib-calculator/: Cargo.toml
crates/core/lib-calculator/src/: config.rs  error.rs  lib.rs  utils.rs
crates/core/lib-calculator/src/model/: error.rs  mod.rs
crates/core/lib-calculator/src/model/gbdt/: gbdt_trainer.rs  mod.rs
crates/core/lib-calculator/src/operation/: mod.rs
crates/core/lib-calculator/src/operation/exec/: base.rs  exec_mean.rs
crates/core/lib-calculator/src/operation/push/: base.rs
crates/core/lib-calculator/src/operator/: error.rs  mod.rs  pipeline.rs  test.rs
crates/core/lib-calculator/src/operator/exec/: base.rs  exec_argmax.rs  exec_argmin.rs  exec_mean.rs  exec_prod.rs  exec_sum.rs  mod.rs  test.rs
crates/core/lib-calculator/src/operator/push/: base.rs  mod.rs  prep_res_vec.rs  prep_square.rs  test.rs
crates/core/playground/: Cargo.toml
crates/use-ai/src/: config_menu.rs  error.rs  main.rs  start_menu.rs
docs/: book.toml
docs/book/: 404.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
docs/book/blog/: 0.html  1.html  2.html  3.html  4.html  5.html  index.html
docs/book/calc/: calc.html  config.html  index.html  model.html  operation.html
docs/book/macros/: macros.html
docs/book/stage/: config.html  index.html  input.html  output.html  stage.html  transfer.html
docs/book/store/: config.html  db.html  store.html
docs/book/tooling/: index.html  testai.html  useai.html
docs/src/: README.md  SUMMARY.md
docs/src/blog/: 4.md  (+1 more)
(+17 files in other folders)
