[package]
name = "lib-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
action-space = { path = "../proc-macros/action-space" }
lib-store = { path = "../lib-store" }
serde = "1.0.217"
cubecl = { version = "0.4.0", features = ["wgpu", "reduce"] }
thiserror = "2.0.11"
ndarray = "0.16.1"
rand = "0.8.5"
